@@ -32,6 +32,7 @@
 
 #include <stdarg.h>
 #include <stddef.h>
+#include <string.h>
 
 #include <netinet/in.h>
 #include <arpa/inet.h>
